# OKITA

./: .gitignore  LICENSE  README.md
mobile/: .gitignore  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  follow.tsx  home.tsx  index.tsx  tap.tsx
mobile/app/(auth)/: login.tsx  register.tsx
mobile/app/invite/: [handle].tsx
mobile/app/me/: family.tsx  index.tsx  invite.tsx  log.tsx  mute.tsx  visibility.tsx  wake-target.tsx
mobile/app/user/: [id].tsx
mobile/assets/: build_icons.py
mobile/src/: api.ts  auth.tsx  notifications.ts  pickers.tsx  theme.ts
scripts/: okita-start.ps1  okita-status.ps1  okita-stop.ps1
server/: .env.example  .gitignore  README.md  pyproject.toml
server/app/: config.py  db.py  main.py  models.py  plans.py  push.py  scheduler.py  schemas.py  security.py
server/app/routers/: auth.py  billing.py  family.py  follows.py  invite.py  me.py  mute.py  timeline.py  users.py  visibility.py  wakes.py
server/tests/: test_billing.py  test_family.py  test_invite.py  test_plans.py  test_scheduler.py
